Fix jump link buffering

--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@ Adapted from https://css-tricks.com/hash-tag-links-padding/
 h1::before, h2::before, h3::before { 
   display: block; 
   content: " "; 
-  margin-top: -calc(3rem);
-  height: calc(3rem); 
+  margin-top: -calc(4rem);
+  height: calc(4rem); 
   visibility: hidden; 
   pointer-events: none;
 }
